Completed challenge 2 (claims) and added files for challenge 3 badges. Added additional formatting to challenge 2 claims such as displaying money and short dates. Display table is functional in full screen.

--- a/ConsoleAppKomodoClaims/ConsoleAppKomodoClaims.csproj
+++ b/ConsoleAppKomodoClaims/ConsoleAppKomodoClaims.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepoKomodoClaims\RepoKomodoClaims.csproj">
+      <Project>{c9d5b48f-6b41-41e6-831d-fe0d7ac6fa21}</Project>
+      <Name>RepoKomodoClaims</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
