--- a/UnitTestsKomodoClaims/UnitTestsKomodoClaims.csproj
+++ b/UnitTestsKomodoClaims/UnitTestsKomodoClaims.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepoKomodoClaims\RepoKomodoClaims.csproj">
+      <Project>{c9d5b48f-6b41-41e6-831d-fe0d7ac6fa21}</Project>
+      <Name>RepoKomodoClaims</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
