Completed challenge 3 after working in learning gym today. All challenges are finished and could be graded at this point. However, I might continue to tweak some things to improve usability through improved error handling.

--- a/UnitTestsKomodoBadges/UnitTestsKomodoBadges.csproj
+++ b/UnitTestsKomodoBadges/UnitTestsKomodoBadges.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepoKomodoBadges\RepoKomodoBadges.csproj">
+      <Project>{dd7157ab-6e1d-4f24-ad5f-1e3445da873a}</Project>
+      <Name>RepoKomodoBadges</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
