--- a/ConsoleAppKomodoBadges/ConsoleAppKomodoBadges.csproj
+++ b/ConsoleAppKomodoBadges/ConsoleAppKomodoBadges.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepoKomodoBadges\RepoKomodoBadges.csproj">
+      <Project>{dd7157ab-6e1d-4f24-ad5f-1e3445da873a}</Project>
+      <Name>RepoKomodoBadges</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
